tests/golden/parse_errors/for_missing_first_semicolon.err
Parse error at 1:15: expected `;` after for initializer, found Identifier `i`
  for let i = 0 i < 3; i = i + 1 {
                ^
